maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:2: error: ';' expected but ')' found.
override def run() {while (!isOverBaggle()) {if (!isFacingWall()) {forward()} else {right(); if (!isFacingWall()) {forward()} else {left(); left(); if (!isFacingWall()) {forward()})}}}
                                                                                                                                                                                    ^