maze.randommouse.RandomMouseMaze.scala.code
override def run() {while (!isOverBaggle()) {if (!isFacingWall()) {forward()} else {right(); if (!isFacingWall()) {forward()} else {left(); left(); if (!isFacingWall()) {forward()})}}}
                                             
    // Your code here 
}
